fix: parallax width on mobile

--- a/src/style/components/Parallax.css
+++ b/src/style/components/Parallax.css
@@ -38,7 +38,8 @@
 
 @media screen and (max-width: 670px) {
     .parallax_layer_back {
-        transform: translateZ(-1px) scale(3.5); 
+        /* transform: translateZ(-1px) scale(3.6);  */
+        width: 200%;
     }
 }
     
